fix footer nav ul <h3>s font-size(too small)

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -17,7 +17,7 @@
 
             h4 {
                 font-weight: 600;
-                font-size: .675rem;
+                font-size: .725rem;
                 letter-spacing: 1px;
                 margin-bottom: .875rem;
             }
