--- a/src/style/general.css
+++ b/src/style/general.css
@@ -842,7 +842,7 @@ article a .product--desc--container p {
 }
 .footer .footer--nav .footer--nav--ul h4 {
   font-weight: 600;
-  font-size: 0.675rem;
+  font-size: 0.725rem;
   letter-spacing: 1px;
   margin-bottom: 0.875rem;
 }
